src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__nice__end_of_options.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"nice -n 5 -- date\")?"
---
nice -n 5 -- date

0   4   `nice`  CALLABLE `nice`
4   6   ` -`    punctuation.definition.parameter
6   7   `n`     variable.parameter.option
8   9   `5`     meta.function-call.arguments
9   12  ` --`   keyword.operator.end-of-options
13  17  `date`  CALLABLE `date`
