src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__nice__simple.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"nice ls\")?"
---
nice ls

0  4  `nice`  CALLABLE `nice`
5  7  `ls`    CALLABLE `ls`
